Fixed Footer Overflow

--- a/client/styles/layout.less
+++ b/client/styles/layout.less
@@ -23,6 +23,10 @@
   padding-left: 10px;
 }
 
+main {
+    min-height: 0;
+}
+
 .rui.list-group-item {
     display: flex;
     padding-left: 10px;
